# seacan

./: Cargo.toml  README.md  README.tpl
git-hooks/: pre-commit
samples/hello_world/: Cargo.toml
samples/hello_world/examples/: example_1.rs  example_2.rs
samples/hello_world/src/: lib.rs  main.rs  module.rs
samples/hello_world/tests/: integration_tests_1.rs  integration_tests_2.rs
samples/hello_world/ws_member/: Cargo.toml
samples/hello_world/ws_member/src/: main.rs
src/: bin.rs  lib.rs  test.rs  test_common.rs
tests/: test_compile_working_dir.rs
