[package]
name = "seacan"
version = "0.0.1"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"
description = "A library for interacting with cargo to build things"
license = "MIT"
repository = "https://github.com/danielzfranklin/seacan"
keywords = ["cargo", "compile", "build", "ide"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "1.0.24"
displaydoc = "0.2.1"
cargo_metadata = "0.13.1"
camino = "1.0.4"
tracing = "0.1.26"
regex = "1.5.4"
lazy_static = "1.4.0"
derivative = "2.2.0"

[dev-dependencies]
eyre = "0.6.5"
tracing-subscriber = "0.2.18"
color-eyre = "0.5.11"
pretty_assertions = "0.7.2"
